--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,12 @@
 <body>
     <h1>안녕하세요!</h1>
     <p>이것은 간단한 HTML 페이지입니다.</p>
-    <li><a href="userlist">사용자 리스트 보기</a></li>    
-    <li><a href="useradd">사용자 등록하기</a></li>
-    <li><a href="sitelist">사이트 리스트 보기</a></li>
-    <li><a href="siteapply">사이트 등록하기</a></li>
+    <li><a href="users/userlist">사용자 리스트 보기</a></li>    
+    <li><a href="users/useradd">사용자 등록하기</a></li>
+    <li><a href="sites/sitelist">사이트 리스트 보기</a></li>
+    <li><a href="sites/siteapply">사이트 등록하기</a></li>
+    <li><a href="products/productlist">제품 리스트 보기</a></li>
+    <li><a href="products/productapply">제품 등록하기</a></li>
     
 </body>
 </html>
